// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompliantSystems expect to render with unsupported hosts 1`] = `
<DocumentFragment>
  <div
    class="pf-l-grid report-table-chart-container"
  >
    <div
      class="pf-l-grid__item pf-m-12-col"
    >
      <div
        class="pf-c-chart"
        style="pointer-events: none; position: relative; width: 100%; height: 100%;"
      >
        <svg
          height="230"
          role="img"
          style="pointer-events: all; width: 100%; height: 100%;"
          viewBox="0 0 230 230"
          width="230"
        >
          <g>
            <path
              d="M1.130044229770525,-94.99327870980537A95,95,0,0,1,83.58721329114323,-45.14618227736349L77.38854766660421,-41.892871589970134A88,88,0,0,0,1.1300442297705258,-87.99274401925855Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M84.63752876916065,-43.14497333235359A95,95,0,0,1,88.41953933315978,-34.741690576479016L81.8739256900158,-32.25926676330031A88,88,0,0,0,78.43886314462165,-39.89166264496023Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M89.22097774606146,-32.62847115690228A95,95,0,1,1,-1.1300442297705369,-94.99327870980537L-1.1300442297705169,-87.99274401925855A88,88,0,1,0,82.67536410291748,-30.146047343723573Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M-1.745121688784978e-14,-95L-1.6165337748745062e-14,-88Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
          </g>
          <text
            direction="inherit"
            dx="0"
            x="115"
            y="113.675"
          >
            <tspan
              dx="0"
              dy="0"
              style="fill: var(--pf-chart-donut--label--title--Fill, #151515); font-size: 24px; text-anchor: middle; font-family: var(--pf-chart-global--FontFamily, "RedHatText", "Overpass", overpass, helvetica, arial, sans-serif); letter-spacing: var(--pf-chart-global--letter-spacing, normal); stroke: transparent;"
              text-anchor="middle"
              x="115"
            >
              0%
            </tspan>
            <tspan
              dx="0"
              dy="13.5"
              style="fill: var(--pf-chart-donut--label--subtitle--Fill, #b8bbbe); font-size: 14px; text-anchor: middle; font-family: var(--pf-chart-global--FontFamily, "RedHatText", "Overpass", overpass, helvetica, arial, sans-serif); letter-spacing: var(--pf-chart-global--letter-spacing, normal); stroke: transparent;"
              text-anchor="middle"
              x="115"
            >
              Compliant
            </tspan>
          </text>
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        >
          <svg
            height="230"
            style="overflow: visible; width: 100%; height: 100%;"
            viewBox="0 0 230 230"
            width="230"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CompliantSystems expect to render without error 1`] = `
<DocumentFragment>
  <div
    class="pf-l-grid report-table-chart-container"
  >
    <div
      class="pf-l-grid__item pf-m-12-col"
    >
      <div
        class="pf-c-chart"
        style="pointer-events: none; position: relative; width: 100%; height: 100%;"
      >
        <svg
          height="230"
          role="img"
          style="pointer-events: all; width: 100%; height: 100%;"
          viewBox="0 0 230 230"
          width="230"
        >
          <g>
            <path
              d="M1.130044229770525,-94.99327870980537A95,95,0,1,1,-56.74987327881188,-76.1869534949311L-52.63506222954659,-70.52340196056737A88,88,0,1,0,1.1300442297705258,-87.99274401925855Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M-54.92142330625248,-77.51540016032574A95,95,0,0,1,-1.1300442297705369,-94.99327870980537L-1.1300442297705169,-87.99274401925855A88,88,0,0,0,-50.80661225698723,-71.85184862596199Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M-1.745121688784978e-14,-95L-1.6165337748745062e-14,-88Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M-1.745121688784978e-14,-95L-1.6165337748745062e-14,-88Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
          </g>
          <text
            direction="inherit"
            dx="0"
            x="115"
            y="113.675"
          >
            <tspan
              dx="0"
              dy="0"
              style="fill: var(--pf-chart-donut--label--title--Fill, #151515); font-size: 24px; text-anchor: middle; font-family: var(--pf-chart-global--FontFamily, "RedHatText", "Overpass", overpass, helvetica, arial, sans-serif); letter-spacing: var(--pf-chart-global--letter-spacing, normal); stroke: transparent;"
              text-anchor="middle"
              x="115"
            >
              0%
            </tspan>
            <tspan
              dx="0"
              dy="13.5"
              style="fill: var(--pf-chart-donut--label--subtitle--Fill, #b8bbbe); font-size: 14px; text-anchor: middle; font-family: var(--pf-chart-global--FontFamily, "RedHatText", "Overpass", overpass, helvetica, arial, sans-serif); letter-spacing: var(--pf-chart-global--letter-spacing, normal); stroke: transparent;"
              text-anchor="middle"
              x="115"
            >
              Compliant
            </tspan>
          </text>
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        >
          <svg
            height="230"
            style="overflow: visible; width: 100%; height: 100%;"
            viewBox="0 0 230 230"
            width="230"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Name expect to render without error 1`] = `
<DocumentFragment>
  <div
    class="pf-c-content"
  >
    <a
      app="compliance"
      disabled=""
      style="margin-right: .5rem;"
      to="/reports/ID"
    >
      POLICY_NAME
    </a>
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="PopoverViewPolicyLink"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="grey-icon"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
        />
      </svg>
    </button>
    <small
      class=""
      data-ouia-component-id="OUIA-Generated-Text-1"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      POLICY_TYPE
    </small>
  </div>
</DocumentFragment>
`;

exports[`OperatingSystem expect to render with SSG version 1`] = `
<DocumentFragment>
  RHEL 7
  <p
    class=""
    data-ouia-component-id="OUIA-Generated-Text-2"
    data-ouia-component-type="PF4/Text"
    data-ouia-safe="true"
    data-pf-content="true"
  >
    <small
      class=""
      data-ouia-component-id="OUIA-Generated-Text-3"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      SSG: 1.2.3
    </small>
  </p>
</DocumentFragment>
`;

exports[`OperatingSystem expect to render with unsupported warning 1`] = `
<DocumentFragment>
  RHEL 7
  <p
    class=""
    data-ouia-component-id="OUIA-Generated-Text-4"
    data-ouia-component-type="PF4/Text"
    data-ouia-safe="true"
    data-pf-content="true"
  >
    <small
      class=""
      data-ouia-component-id="OUIA-Generated-Text-5"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      <span
        style="display: inline-block;"
      >
        <span
          class="pf-u-mr-xs"
          style="cursor: pointer;"
        >
          <svg
            aria-hidden="true"
            fill="var(--pf-global--warning-color--100)"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </span>
        SSG: 1.2.3
      </span>
    </small>
  </p>
</DocumentFragment>
`;

exports[`OperatingSystem expect to render without error 1`] = `
<DocumentFragment>
  RHEL 7
</DocumentFragment>
`;

exports[`PDFExportDownload expect to render without error 1`] = `
<DocumentFragment>
  <button
    app="compliance"
    aria-disabled="true"
    class="pf-c-button pf-m-plain pf-m-disabled pf-u-mr-md"
    data-ouia-component-id="ReportsDownloadReportPDFLink"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe="true"
    disabled=""
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="1em"
      role="img"
      style="vertical-align: -0.125em;"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
      />
    </svg>
  </button>
</DocumentFragment>
`;
